[gd_scene load_steps=4 format=2]

[ext_resource path="res://Client/Scenes/Notifications/Popup.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/Theme/MainTheme.tres" type="Theme" id=3]
[ext_resource path="res://Client/Scenes/Notifications/Messages.gd" type="Script" id=4]

[node name="Messages" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 4 )

[node name="QuitButton" type="Button" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 41.0
margin_bottom = 41.0
rect_scale = Vector2( 5, 5 )
text = "X"

[node name="Title" type="Label" parent="."]
margin_left = 207.0
margin_top = 56.0
margin_right = 260.0
margin_bottom = 63.0
rect_scale = Vector2( 6, 6 )
text = "Messages"
align = 1

[node name="Popup" parent="." instance=ExtResource( 1 )]
margin_left = 20.0
margin_top = 178.0
margin_right = 190.0
margin_bottom = 298.0

[node name="ItemList" type="ItemList" parent="."]
margin_left = 23.0
margin_top = 665.0
margin_right = 193.0
margin_bottom = 808.0
rect_scale = Vector2( 4, 4 )
theme = ExtResource( 3 )
icon_scale = 2.0

[connection signal="pressed" from="QuitButton" to="." method="_on_exit"]
[connection signal="notice_dismissed" from="Popup" to="." method="_on_deselect"]
[connection signal="item_selected" from="ItemList" to="." method="_on_select"]
